--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "express": "^4.16.3",
+    "if-env": "^1.0.4",
     "mongoose": "^5.0.17",
-    "if-env": "^1.0.4"
+    "react-router-dom": "^4.3.1"
   }
 }
